--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
+  "homepage": "https://HARSH16069.github.io/News-Website1",
   "name": "client1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://HARSH16069.github.io/News-Website",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
-    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -41,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
