--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://HARSH16069.github.io/News-Website1",
+  "homepage": "https://HARSH16069.github.io/Bharat-News",
   "name": "client1",
   "version": "0.1.0",
   "private": true,
